# pgpipe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/build_and_publish/: action.yml
.github/actions/test/: action.yml
.github/workflows/: publish-prod.yml  publish-test.yml
pgpipe/: cli.py  config.py  core.py  models.py  queries.py
tests/: test_chunks.py  test_db_schema.py
